# whitzard

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.c
src/cmake/: CMakeLists.txt  WhitzardConfig.cmake  api.cmake  exec.cmake  library.cmake  syscall.cmake
src/hello/: CMakeLists.txt  hello.c
src/main/: CMakeLists.txt
src/scripts/: version
src/tools/appimage/: Makefile  cmake_install.cmake
src/tools/elftool/: Makefile  cmake_install.cmake
src/tools/g2/: Makefile  cmake_install.cmake
src/tools/perftool/: Makefile  cmake_install.cmake
src/tools/vppapigen/: Makefile  cmake_install.cmake
src/vlib/: CMakeLists.txt  buffer.c  threads.c
src/vlib/unix/: main.c  main_copy.c
src/vpp/: CMakeLists.txt
src/vpp-api/: CMakeLists.txt
src/vpp-api/vapi/: CMakeLists.txt
src/vpp/vnet/: main.c
src/vppinfra/: CMakeLists.txt
