cmake_minimum_required(VERSION 3.5)

project(wizt)
#set(CMAKE_BINARY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/build)
#set(CMAKE_CACHEFILE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/build)
#创建文件夹
file(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build)

message(STATUS "build start...")
#message(STATUS ${CMAKE_CURRENT_SOURCE_DIR})
add_subdirectory(src)
add_executable(${PROJECT} ${COMPILE_FILES})
#set(EXECUTABLE_OUTPUT_PATH ../build/bin)

#set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build-root/lib)
#set(CMAKE_INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)

#INSTALL(FILES COPYRIGHT README.md DESTINATION share/doc/cmake/${PROJECT})
#INSTALL(PROGRAMS run.sh DESTINATION bin)
#INSTALL(DIRECTORY doc/ DESTINATION share/doc/cmake/${PROJECT})